// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expenses 
    $1.23
  </h1>
</div>
`;

exports[`should correctly render expenses with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    10
     expenses 
    $1,234.56
  </h1>
</div>
`;
